--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ pandas==1.5.3
 parsedatetime==2.6
 Pillow==10.0.1
 pipreqs==0.4.12
-pydantic==1.10.4
+pydantic==1.10.8
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.21.1
@@ -51,4 +51,4 @@ uvloop==0.17.0
 watchfiles==0.18.1
 websockets==10.4
 yarg==0.1.9
-openai
+openai==1.9.0
