--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ PyYAML==6.0
 regex==2022.10.31
 requests==2.31.0
 sacremoses==0.0.53
+sentence-transformers==2.7.0
 sentry-sdk==1.14.0
 six==1.16.0
 sniffio==1.3.0
