--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,16 @@ autocorrect==2.6.1
 basicsr==1.4.2
 boto3==1.17.98
 cityscapesscripts==2.2.3
-decord==0.6.0
 diffusers==0.16.0
 einops==0.8.0
 elasticsearch==8.6.1
 fairscale==0.4.4
-fastapi==0.111.0
+fastapi==0.89.1
 ftfy==6.2.0
 gensim==4.3.2
-gradio==4.29.0
-horovod==0.28.1
 iopath==0.1.10
-ipython==8.24.0
 lmdb==1.4.1
 matplotlib==3.6.3
-mc==0.0
 nltk==3.8.1
 numpy==1.24.1
 omegaconf==2.3.0
@@ -42,23 +37,20 @@ python_magic==0.4.27
 PyYAML==6.0.1
 regex==2022.10.31
 requests==2.31.0
-scipy==1.13.0
+scipy
 sentence_transformers==2.7.0
 sentry_sdk==1.14.0
 setuptools==69.5.1
-skimage==0.0
 spacy==3.7.4
-starlette==0.37.2
+starlette==0.22.0
 streamlit==1.33.0
 tensorboardX==2.6.2.2
-tensorflow==2.16.1
-tifffile==2024.4.18
+tifffile
 timm==0.4.12
 torch==1.13.1
 torch_tb_profiler==0.4.3
 torchvision==0.14.1
 tqdm==4.64.1
 transformers==4.40.1
-turbojpeg==0.0.2
 webdataset==0.2.86
 yapf==0.40.2
